--- a/angular/my-first-app/src/app/servers/servers.component.html
+++ b/angular/my-first-app/src/app/servers/servers.component.html
@@ -1,1 +1,20 @@
+<label>Server Name</label>
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" /> -->
+
+<input type="text" class="form-control" [(ngModel)]="serverName" />
+
+<!-- <p>{{ serverName }}</p> -->
+
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()"
+>
+  Add Server
+</button>
+
+<!-- <p [innerText]="allowNewServer"></p> -->
+
+<!-- remember me - this is using Event Binding - the click above fires the function on the component page, and displays the status -->
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server> <app-server></app-server>
