--- a/angular/my-first-app/src/app/servers/servers.component.html
+++ b/angular/my-first-app/src/app/servers/servers.component.html
@@ -16,5 +16,10 @@
 <!-- <p [innerText]="allowNewServer"></p> -->
 
 <!-- remember me - this is using Event Binding - the click above fires the function on the component page, and displays the status -->
-<p>{{ serverCreationStatus }}</p>
-<app-server></app-server> <app-server></app-server>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<!-- <ng-template #noServer><p>No server was created</p></ng-template> -->
+<app-server *ngFor="let server of servers"></app-server>
