issues in string interpolation object

--- a/Class12/exercise4/string-interpolation-object/src/app/post/post.component.html
+++ b/Class12/exercise4/string-interpolation-object/src/app/post/post.component.html
@@ -1,4 +1,9 @@
 <p>post works!</p>
-<p>{{ info }}</p>
+<!-- <p>{{ info }}</p> -->
 
-<!-- {{ [info] }} -->
+<!-- info: object = { firstName: 'Joe', lastName: 'Blow' }; -->
+
+<pre>{{ info | json }}</pre>
+
+<div>Id: {{ info.firstName }}</div>
+<div>Name: {{ info.lastName }}</div>
