--- a/Class12/exercise2/create-complex-structure/src/app/app.component.html
+++ b/Class12/exercise2/create-complex-structure/src/app/app.component.html
@@ -1,1 +1,5 @@
-<div class="navbar"><app-navbar></app-navbar></div>
+<div class="container">
+  <div class="row">
+    <app-navbar></app-navbar>
+  </div>
+</div>
