--- a/angular/my-first-app/src/app/servers/servers.component.html
+++ b/angular/my-first-app/src/app/servers/servers.component.html
@@ -18,6 +18,7 @@
 <!-- remember me - this is using Event Binding - the click above fires the function on the component page, and displays the status -->
 <!-- <p>{{ serverCreationStatus }}</p> -->
 
+<!-- remember me - this ngIf working -->
 <p *ngIf="serverCreated; else noServer">
   Server was created, server name is {{ serverName }}
 </p>
