--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-my-profile></app-my-profile>
+<!-- the app component is the parent to my-profile -->
+<app-my-profile [parentData]="data" [data]="data"></app-my-profile>
