--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>List of users</h1>
+<div><h1>List of Users</h1></div>
+<div class="container">
+  <div class="row">
+    <app-user></app-user>
+    <!-- <div class="userbox" *ngFor let user of users>
+      {{ users.id }} <br />
+      {{ users.username }}
+    </div> -->
+  </div>
+</div>
