Class 14working on exercise 3

--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div><h1>List of Users</h1></div>
-<div class="container">
-  <div class="row">
-    <app-user></app-user>
-
-  </div>
-</div>
+<h1>list of users</h1>
