Class14 ex 2 not working

--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
@@ -1,2 +1,4 @@
-<!-- the app component is the parent to my-profile -->
-<app-my-profile [parentData]="data" [data]="data"></app-my-profile>
+<!-- app component is the parent -->
+<app-my-profile>
+  <app-posts></app-posts>
+</app-my-profile>
