--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/my-profile/my-profile.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/my-profile/my-profile.component.html
@@ -1,2 +1,2 @@
-<!-- my-profile is the parent to posts  -->
-<app-posts></app-posts>
+<!-- my-profile is the child -->
+<!-- <app-posts></app-posts> -->
