Class14 ex 2 still not working

--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- app component is the parent -->
-<app-my-profile>
-  <app-posts></app-posts>
-</app-my-profile>
+<!-- this is the parent -->
+
+<app-my-profile><app-posts></app-posts></app-my-profile>
