Class14/exercise2 - working

--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/my-profile/posts/posts.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/my-profile/posts/posts.component.html
@@ -1,2 +1,4 @@
 <!-- This is the grandchild -->
-<p>I am the grandchild</p>
+<!-- remember me - Exercise 2: Passing down information two levels deep
+   using the input decorator / passing data from parent to grandchild -->
+<div [(ngModel)]="myPosts">{{ myPosts }}</div>
