--- a/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
+++ b/Class14/exercise2/angular-nested-components-input-exercise/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- this is the parent -->
 
-<app-my-profile><app-posts></app-posts></app-my-profile>
+<app-my-profile [profilePosts]="myPosts"></app-my-profile>
