Class14/exercise3 working w/out array or styles

--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>list of users</h1>
+<div><h1>List of Users</h1></div>
+<div class="container">
+  <div class="row">
+    <!-- ngFor goes here, pass one user -->
+    <app-user [passedUser]="users"></app-user>
+  </div>
+</div>
