Class14 Ex 3 not working

--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/user/user.component.html
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/user/user.component.html
@@ -1,1 +1,6 @@
-<p *ngFor="let user of passedUser">username: {{ user.username }}</p>
+<p>here</p>
+<p>
+  {{ passedUser.id }}
+  <br />
+  {{ passedUser.username }}
+</p>
