--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div><h1>List of Users</h1></div>
+<div class="container"><h1>List of Users</h1></div>
 <div class="container">
   <div class="row">
     <!-- ngFor goes here, pass one user -->
-    <app-user [passedUser]="users"></app-user>
+    <div class="boxdiv">
+      <app-user *ngFor="let user of users"></app-user>
+    </div>
   </div>
 </div>
