--- a/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/styles.css
+++ b/Class14/exercise3/angular-ngFor-input-decorator-exercise/src/styles.css
@@ -7,6 +7,8 @@
   border: 2px;
   border-style: solid;
   border-color: black;
+  margin: 20px;
+  text-align: center;
   padding: 20px;
-  width: 200px;
+  width: 300px;
 }
