Class14/exercise4 - Working

--- a/Class14/exercise4/angular-basic-custom-event-exercise/src/app/app.component.html
+++ b/Class14/exercise4/angular-basic-custom-event-exercise/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-navbar (mySearch)="(outputSearch)"></app-navbar>
+<app-navbar (searchEmitter)="onSearch($event)"></app-navbar>
+
+<p>{{ appSearch }}</p>
+<!-- <app-navbar (searchEmitter)="mySearch = $event"></app-navbar> -->
+
+<!-- <button (click)="onMethod()"></button> -->
