--- a/Class14/exercise4/angular-basic-custom-event-exercise/src/app/navbar/navbar.component.html
+++ b/Class14/exercise4/angular-basic-custom-event-exercise/src/app/navbar/navbar.component.html
@@ -1,3 +1,9 @@
-<input name="mySearch" />
+<!-- <input name="mySearch" /> -->
+<input
+  name="mySearch"
+  type="text"
+  class="form-control"
+  [(ngModel)]="mySearch"
+/>
 
-<button (click)="onSearchClick(mySearch)">Search</button>
+<button (click)="onSearchClick()">Search</button>
