max - Seeing Lifecycle Hooks in Action

--- a/max/cmp-databinding-start/src/app/server-element/server-element.component.html
+++ b/max/cmp-databinding-start/src/app/server-element/server-element.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <!--<div class="panel-heading">{{ element.name }}</div>-->
-  <div class="panel-heading" #heading>{{ element.name }}</div>
+  <div class="panel-heading" #heading>{{ name }}</div>
   <div class="panel-body">
     <!-- remember me -  Projecting Content into Components with ng-content
        - this adds a placeholder so the content can be displayed in
