--- a/max/cmp-databinding-start/src/app/app.component.html
+++ b/max/cmp-databinding-start/src/app/app.component.html
@@ -8,9 +8,16 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">
+        Change first element
+      </button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">
+        Destroy first element
+      </button>
       <app-server-element
         *ngFor="let serverElement of serverElements"
         [srvElement]="serverElement"
+        [name]="serverElement.name"
       >
         <p>
           <strong *ngIf="serverElement.type === 'server'">{{
