--- a/max/directives-start/src/app/app.component.html
+++ b/max/directives-start/src/app/app.component.html
@@ -35,7 +35,9 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Style me with basic directive!</p>
-      <p appBetterHighlight>Style me with a better directive!</p>
+      <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">
+        Style me with a better directive!
+      </p>
     </div>
   </div>
 </div>
