max -  Understanding ngSwitch

--- a/max/directives-start/src/app/app.component.html
+++ b/max/directives-start/src/app/app.component.html
@@ -62,6 +62,12 @@
       <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">
         Style me with a better directive!
       </p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault="default">Value is default</p>
+      </div>
     </div>
   </div>
 </div>
