--- a/max/recipe-app/src/app/shopping-list/shopping-list.component.html
+++ b/max/recipe-app/src/app/shopping-list/shopping-list.component.html
@@ -2,12 +2,14 @@
   <div class="col-xs-10">
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <a
-      class="list-group-item"
-      style="cursor: pointer"
-      *ngFor="let ingredient of ingredients"
-    >
-      {{ ingredient.name }} ({{ ingredient.amount }})
-    </a>
+    <ul class="list-group">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
+    </ul>
   </div>
 </div>
