--- a/max/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/max/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
+    <img
+      src="{{ recipe.imagepath }}"
+      alt="{{ recipe.description }}"
+      class="img-responsive"
+    />
   </div>
 </div>
 
