--- a/max/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/max/recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <img
-      src="{{ recipe.imagepath }}"
+      src="{{ recipe.imagePath }}"
       alt="{{ recipe.description }}"
       class="img-responsive"
     />
@@ -21,7 +21,11 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer"
+            >To Shopping List</a
+          >
+        </li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
