--- a/max/routing-start/src/app/app.component.html
+++ b/max/routing-start/src/app/app.component.html
@@ -2,7 +2,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <ul class="nav nav-tabs">
-        <li role="presentation" routerLinkActive="active" class="active">
+        <!-- remember me - this marks the / home page of the routerlink, for styling purposes [routerLinkActiveOptions]="{exact: true}"   -->
+        <li
+          role="presentation"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="active"
+        >
           <a routerLink="/">Home</a>
         </li>
         <li role="presentation" routerLinkActive="active">
