--- a/max/routing-start/src/app/servers/servers.component.html
+++ b/max/routing-start/src/app/servers/servers.component.html
@@ -19,6 +19,6 @@
     <button class="btn btn-primary" (click)="onReload()">Reload page</button>
     <app-edit-server></app-edit-server>
     <hr />
-    <app-server></app-server>
+    <!-- <app-server></app-server> -->
   </div>
 </div>
