max -     TD: Using the Form State

--- a/max/forms-td-start/src/app/app.component.html
+++ b/max/forms-td-start/src/app/app.component.html
@@ -12,6 +12,7 @@
               class="form-control"
               ngModel
               name="username"
+              required
             />
           </div>
           <button class="btn btn-default" type="button">
@@ -25,6 +26,8 @@
               class="form-control"
               ngModel
               name="email"
+              required
+              email
             />
           </div>
         </div>
@@ -35,7 +38,9 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!f.valid">
+          Submit
+        </button>
       </form>
     </div>
   </div>
