--- a/max/forms-td-start/src/app/app.component.html
+++ b/max/forms-td-start/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <!-- remember me - Form - using ngSubmit to submit a form -->
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -35,6 +35,7 @@
             >
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User Data is invalid!</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <!-- remember me - Default form value - binding to ngModel
@@ -56,7 +57,7 @@
             class="form-control"
             [(ngModel)]="answer"
           ></textarea>
-          <!-- remember me - Two way binding on answer property -->
+          <!-- remember me - ngModel and Two way binding on answer property -->
         </div>
         <p>Your reply: {{ answer }}</p>
         <button class="btn btn-primary" type="submit" [disabled]="!f.valid">
