--- a/max/forms-reactive-start/src/app/app.component.html
+++ b/max/forms-reactive-start/src/app/app.component.html
@@ -11,6 +11,14 @@
             class="form-control"
             formControlName="username"
           />
+          <span
+            *ngIf="
+              !signupForm.get('username').valid &&
+              signupForm.get('username').touched
+            "
+            class="help-block"
+            >Please enter a valid username!</span
+          >
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -20,10 +28,24 @@
             class="form-control"
             formControlName="email"
           />
+          <span
+            *ngIf="
+              !signupForm.get('email').valid && signupForm.get('email').touched
+            "
+            class="help-block"
+            >Please enter a valid email!</span
+          >
         </div>
         <div class="radio" *ngFor="let gender of genders">
-          <label> <input type="radio" [value]="gender" />{{ gender }} </label>
+          <label>
+            <input type="radio" formControlName="gender" [value]="gender" />{{
+              gender
+            }}
+          </label>
         </div>
+        <span *ngIf="!signupForm.valid && signupForm.touched" class="help-block"
+          >Please enter valid data!</span
+        >
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
