--- a/max/forms-reactive-start/src/app/app.component.html
+++ b/max/forms-reactive-start/src/app/app.component.html
@@ -18,7 +18,18 @@
                 signupForm.get('userData.username').touched
               "
               class="help-block"
-              >Please enter a valid username!</span
+            >
+              <!-- remember me - using Error Codes -->
+              <span
+                *ngIf="
+                  signupForm.get('userData.username').errors['nameIsForbidden']
+                "
+                >This name is invalid</span
+              >
+              <span
+                *ngIf="signupForm.get('userData.username').errors['required']"
+              ></span>
+              This field is required!</span
             >
           </div>
           <div class="form-group">
