--- a/max/forms-td-start/src/app/app.component.html
+++ b/max/forms-td-start/src/app/app.component.html
@@ -76,6 +76,7 @@
             {{ gender }}
           </label>
         </div>
+        <!-- remember me - disable button until form is valid -->
         <button class="btn btn-primary" type="submit" [disabled]="!f.valid">
           Submit
         </button>
