max -   Adding Validation to the Form

--- a/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,21 +10,28 @@
             class="form-control"
             name="name"
             ngModel
+            required
           />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
+          <!-- remember me Reg Expression pattern for positive numbers only pattern="^[1-9]+[0-9]*$" -->
           <input
             type="number"
             id="amount"
             class="form-control"
             name="amount"
             ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
           />
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success" type="submit">Add</button>
+            <!-- remember me - disable button until form is valid -->
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">
+              Add
+            </button>
             <button class="btn btn-danger" type="button">Delete</button>
             <button class="btn btn-primary" type="button">Clear</button>
           </div>
