max -   Allowing the Selection of Items in the List

--- a/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <!-- remember me Reg Expression pattern for positive numbers only pattern="^[1-9]+[0-9]*$" -->
+          <!-- remember me Regular Expression pattern for positive numbers only pattern="^[1-9]+[0-9]*$" -->
           <input
             type="number"
             id="amount"
