--- a/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/max/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -33,7 +33,14 @@
               <!-- remember me change button name based on mode - a ternary expression -->
               {{ editMode ? "Update" : "Add" }}
             </button>
-            <button class="btn btn-danger" type="button">Delete</button>
+            <button
+              class="btn btn-danger"
+              type="button"
+              (click)="onDelete()"
+              *ngIf="editMode"
+            >
+              Delete
+            </button>
             <button class="btn btn-primary" type="button" (click)="onClear()">
               Clear
             </button>
