--- a/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,13 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button
+            type="submit"
+            class="btn btn-success"
+            [disabled]="!recipeForm.valid"
+          >
+            Save
+          </button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -60,10 +66,7 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div
             class="row"
-            *ngFor="
-              let ingredientCtrl of recipeForm.get('ingredients').controls;
-              let i = index
-            "
+            *ngFor="let ingredientCtrl of controls; let i = index"
             [formGroupName]="i"
             style="margin-top: 10px"
           >
