max -   Adding an Image Preview

--- a/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -38,6 +38,7 @@
               id="imagePath"
               class="form-control"
               formControlName="imagePath"
+              #imagePath
             />
           </div>
         </div>
@@ -46,7 +47,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <img src="" class="img-responsive" />
+            <img [src]="imagePath.value" class="img-responsive" />
           </div>
         </div>
       </div>
