--- a/SideProjects/todolist/src/app/app.component.html
+++ b/SideProjects/todolist/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <label for="addItemInput">What would you like to do today?</label>
-      <form [formGroup]="todoForm" (ngSubmit)="onSubmit()">
+      <form (ngSubmit)="onSubmit()" todoForm="ngForm">
         <input
           #newItem
           placeholder="Type a to-do list item here"
