max -   Error Handling & UX

--- a/max/http-01-start/src/app/app.component.html
+++ b/max/http-01-start/src/app/app.component.html
@@ -62,6 +62,7 @@
       <div class="alert alert-danger" *ngIf="error">
         <h1>An Error Occurred!</h1>
         <p>{{ error }}</p>
+        <div class="btn btn-danger" (click)="OnHandleError()">Okay</div>
       </div>
     </div>
   </div>
