max - Adding the Auth Page

--- a/max/recipe-app/src/app/header/header.component.html
+++ b/max/recipe-app/src/app/header/header.component.html
@@ -7,6 +7,9 @@
       <ul class="nav navbar-nav">
         <li><a routerLinkActive="active" routerLink="/recipes">Recipes</a></li>
         <li>
+          <a routerLinkActive="active" routerLink="/auth">Authenticate</a>
+        </li>
+        <li>
           <a routerLinkActive="active" routerLink="/shopping-list"
             >Shopping List</a
           >
