--- a/max/recipe-app/src/app/header/header.component.html
+++ b/max/recipe-app/src/app/header/header.component.html
@@ -1,22 +1,26 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">Recipe Book</a>
+      <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
+
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLinkActive="active" routerLink="/recipes">Recipes</a></li>
-        <li>
-          <a routerLinkActive="active" routerLink="/auth">Authenticate</a>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/recipes">Recipes</a>
         </li>
-        <li>
-          <a routerLinkActive="active" routerLink="/shopping-list"
-            >Shopping List</a
-          >
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/auth">Authenticate</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated">
+          <a style="cursor: pointer">Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
