--- a/max/recipe-app/src/app/auth/auth.component.html
+++ b/max/recipe-app/src/app/auth/auth.component.html
@@ -2,7 +2,14 @@
   <!-- <div class="alert alert-danger" *ngIf="error">
     <p>{{ error }}</p>
   </div> -->
-  <app-alert [message]="error" *ngIf="error"></app-alert>
+
+  <!-- remember me - showing a component dynamically using ngIf error,
+  close sets error to null -->
+  <app-alert
+    [message]="error"
+    *ngIf="error"
+    (close)="onHandleError()"
+  ></app-alert>
   <div *ngIf="isLoading" style="text-align: center">
     <app-loading-spinner></app-loading-spinner>
   </div>
