--- a/max/recipe-app/src/app/auth/auth.component.html
+++ b/max/recipe-app/src/app/auth/auth.component.html
@@ -1,56 +1,62 @@
-<div class="row col-xs-12 col-md-6 col-md-offset-3">
-  <!-- <div class="alert alert-danger" *ngIf="error">
-    <p>{{ error }}</p>
-  </div> -->
+<!-- remember me -   Creating a Component Programmatically
+  -->
+<ng-template appPlaceholder></ng-template>
+<div class="row">
+  <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <!-- remember me - showing a component dynamically using ngIf error,
+    close sets error to null -->
 
-  <!-- remember me - showing a component dynamically using ngIf error,
-  close sets error to null -->
-  <app-alert
-    [message]="error"
-    *ngIf="error"
-    (close)="onHandleError()"
-  ></app-alert>
-  <div *ngIf="isLoading" style="text-align: center">
-    <app-loading-spinner></app-loading-spinner>
+    <!-- <div class="alert alert-danger" *ngIf="error">
+      <p>{{ error }}</p>
+    </div> -->
+    <!-- <app-alert
+      [message]="error"
+      *ngIf="error"
+      (close)="onHandleError()"
+    ></app-alert> -->
+
+    <div *ngIf="isLoading" style="text-align: center">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+      <div class="form-group">
+        <label for="email">E-Mail</label>
+        <input
+          type="email"
+          id="email"
+          class="&quot;form-control"
+          ngModel
+          name="email"
+          required
+          email
+        />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          class="&quot;form-control"
+          ngModel
+          name="password"
+          required
+          minlength="6"
+        />
+      </div>
+      <div>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!authForm.valid"
+        >
+          {{ isLoginMode ? "Login" : "Sign Up" }}
+        </button>
+        |
+
+        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">
+          Switch to {{ isLoginMode ? "Sign Up" : "Login" }}
+        </button>
+      </div>
+    </form>
   </div>
-  <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
-    <div class="form-group">
-      <label for="email">E-Mail</label>
-      <input
-        type="email"
-        id="email"
-        class="&quot;form-control"
-        ngModel
-        name="email"
-        required
-        email
-      />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        id="password"
-        class="&quot;form-control"
-        ngModel
-        name="password"
-        required
-        minlength="6"
-      />
-    </div>
-    <div>
-      <button
-        class="btn btn-primary"
-        type="submit"
-        [disabled]="!authForm.valid"
-      >
-        {{ isLoginMode ? "Login" : "Sign Up" }}
-      </button>
-      |
-
-      <button class="btn btn-primary" (click)="onSwitchMode()" type="button">
-        Switch to {{ isLoginMode ? "Sign Up" : "Login" }}
-      </button>
-    </div>
-  </form>
 </div>
