--- a/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/max/recipe-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -69,7 +69,7 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div
             class="row"
-            *ngFor="let ingredientCtrl of controls; let i = index"
+            *ngFor="let ingredientCtrl of ingredientsControls; let i = index"
             [formGroupName]="i"
             style="margin-top: 10px"
           >
