--- a/SideProjects/todolist/src/app/item-edit/item-edit.component.html
+++ b/SideProjects/todolist/src/app/item-edit/item-edit.component.html
@@ -1,9 +1,9 @@
-<div class="backdrop">
+<div class="backdrop" (click)="onClose()">
   <div class="edit-box">
     <textarea name="info" id="info" cols="20" rows="3">{{ info }}</textarea>
 
     <div class="edit-box-action">
-      <button class="btn btn-primary">update</button>
+      <button class="btn btn-primary" (click)="onClose()">update</button>
     </div>
   </div>
 </div>
