To Do List - edit-item working with data binding
Probably need to make a form next

--- a/SideProjects/todolist/src/app/app.component.html
+++ b/SideProjects/todolist/src/app/app.component.html
@@ -20,7 +20,10 @@
 
     <ul>
       <div class="container" *ngIf="bIsUpdating">
-        <app-item-edit></app-item-edit>
+        <app-item-edit
+          [info]="clickedItem"
+          (close)="bIsUpdating = !bIsUpdating"
+        ></app-item-edit>
       </div>
 
       <!-- remember me - adding an index to *ngFor -->
@@ -30,16 +33,22 @@
           <div class="row">
             <div class="col">
               <strong
-                ><a (click)="updateItem(i)" style="cursor: pointer">{{
+                ><a (click)="updateItem(item)" style="cursor: pointer">{{
                   item.info
                 }}</a></strong
               >
             </div>
 
             <div class="col">
-              {{ item.completed === true ? "(completed)" : "(not completed)" }}
+              <button
+                (click)="item.completed = !item.completed"
+                class="btn btn-primary"
+              >
+                {{
+                  item.completed === true ? "(completed)" : "(not completed)"
+                }}
+              </button>
             </div>
-
             <div class="col">
               <button class="btn btn-secondary btn-sm" (click)="deleteItem(i)">
                 delete
