To Do list - update edit item

--- a/SideProjects/todolist/src/app/item-edit/item-edit.component.html
+++ b/SideProjects/todolist/src/app/item-edit/item-edit.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="onUpdate()"></div>
+<div class="backdrop" (click)="onClose()"></div>
 <div class="edit-box">
   <textarea
     name="info"
