--- a/SideProjects/todolist/src/app/item/item.component.html
+++ b/SideProjects/todolist/src/app/item/item.component.html
@@ -1,32 +1,81 @@
-<div class="item">
-  <!-- <input
-    [id]="Item.info"
-    type="checkbox"
-    (change)="item.done = !item.done"
-    [checked]="item.done"
-  /> -->
-  <label [for]="item.info">{{ item.info }}</label>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <form (ngSubmit)="onSubmit()" #todoForm="ngForm">
+        <label for="addItemInput">What would you like to do today?</label>
+        <input
+          type="text"
+          id="addItemInput"
+          class="lg-text-input"
+          ngModel
+          placeholder="Type a to-do list item here"
+          name="addItemInput"
+          required
+        />
 
-  <div class="btn-wrapper" *ngIf="!editable">
-    <button class="btn" (click)="editable = !editable">Edit</button>
-    <button class="btn btn-warn" (click)="remove.emit()">Delete</button>
-  </div>
-
-  <!-- This section shows only if user clicks Edit button -->
-  <div *ngIf="editable">
-    <input
-      class="sm-text-input"
-      placeholder="edit item"
-      [value]="item.description"
-      #editedItem
-      (keyup.enter)="saveItem(editedItem.value)"
-    />
-
-    <div class="btn-wrapper">
-      <button class="btn" (click)="editable = !editable">Cancel</button>
-      <button class="btn btn-save" (click)="saveItem(editedItem.value)">
-        Save
-      </button>
+        <button
+          type="submit"
+          class="btn btn-primary btn-sm"
+          [disabled]="!todoForm.valid"
+        >
+          Add
+        </button>
+        <button
+          type="button"
+          class="btn btn-primary btn-sm"
+          (click)="goLogin()"
+        >
+          Login
+        </button>
+      </form>
     </div>
+    <hr />
+
+    <ul>
+      <div class="container" *ngIf="bIsUpdating">
+        <app-item-edit
+          [info]="clickedItem"
+          (close)="bIsUpdating = !bIsUpdating"
+        ></app-item-edit>
+      </div>
+
+      <!-- remember me - adding an index to *ngFor -->
+
+      <li *ngFor="let item of allItems; index as i">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <strong
+                ><a
+                  (click)="updateItem(item)"
+                  style="
+                    cursor: pointer;
+                    color: blue;
+                    text-decoration: underline;
+                  "
+                  >{{ item.info }}</a
+                ></strong
+              >
+            </div>
+
+            <div class="col">
+              <button
+                (click)="item.completed = !item.completed"
+                class="btn btn-primary"
+              >
+                {{
+                  item.completed === true ? "(completed)" : "(not completed)"
+                }}
+              </button>
+            </div>
+            <div class="col">
+              <button class="btn btn-secondary btn-sm" (click)="deleteItem(i)">
+                delete
+              </button>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
