To Do List - changing variable names

--- a/SideProjects/todolist/src/app/item-edit/item-edit.component.html
+++ b/SideProjects/todolist/src/app/item-edit/item-edit.component.html
@@ -8,8 +8,7 @@
       id="info"
       cols="20"
       rows="3"
-      value="{{ info.info }}"
-      ngModel
+      value="{{ pristineText }}"
     ></textarea>
     <!-- <input type="text" name="info" id="info" value="{{ info.info }}" ngModel /> -->
 
