--- a/SideProjects/angular-tour-of-heroes/src/app/app.component.html
+++ b/SideProjects/angular-tour-of-heroes/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>{{ title }}</h1>
-<app-heroes></app-heroes>
+<nav>
+  <!-- remember me - routerLink works the same as <a href> -->
+  <a routerLink="/dashboard">Dashboard</a> |
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+
+<!-- <app-heroes></app-heroes>
+remember me - when adding routing to the app, app-heroes is
+replaced with a router outlet The AppComponent template no longer needs <app-heroes> because the application will only display the HeroesComponent when the user navigates to it.
+
+The <router-outlet> tells the router where to display routed views.-->
+<router-outlet></router-outlet>
 <app-messages></app-messages>
