--- a/SideProjects/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/SideProjects/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,13 +1,30 @@
 <h2>My Heroes</h2>
+<div>
+  <label for="new-hero">Hero name: </label>
+  <input id="new-hero" #heroName />
+
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button
+    type="button"
+    class="add-button"
+    (click)="add(heroName.value); heroName.value = ''"
+  >
+    Add hero
+  </button>
+</div>
+
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{ hero.id }}">
+      <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+    </a>
     <button
-      [class.selected]="hero === selectedHero"
       type="button"
-      (click)="onSelect(hero)"
+      class="delete"
+      title="delete hero"
+      (click)="delete(hero)"
     >
-      <span class="badge">{{ hero.id }}</span>
-      <span class="name">{{ hero.name }}</span>
+      x
     </button>
   </li>
 </ul>
@@ -15,4 +32,4 @@
      new hero to display whenever the user selects a hero from the list.
     [hero]="selectedHero" is an Angular property binding. -->
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
